# PointNet

./: .gitignore  README.md  requirements.txt
cxx/downsample/: CMakeLists.txt  main.cxx
cxx/preprocess/: CMakeLists.txt  README.md  downsample.cxx  main.cxx
cxx/tmp/compute_occupancy/compute_occupancy_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compute_occupancy
cxx/tmp/compute_occupancy/compute_occupancy_build/utils/: Makefile  cmake_install.cmake
cxx/tmp/compute_occupancy/compute_occupancy_src/: CMakeLists.txt  CMakeLists.txt.user.c01910a.4.10-pre1  main.cxx
cxx/tmp/compute_occupancy/compute_occupancy_src/utils/: CMakeLists.txt  utils.cxx  utils.h
cxx/tmp/downsample/build-downsample_src-Desktop-Debug/: CMakeCache.txt  Downsample  Downsample.cbp  Makefile  cmake_install.cmake
cxx/tmp/downsample/build-downsample_src-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-c7fa728f7cf9edd01f7f.json  cmakeFiles-v1-9a21488e3fe1c8b787bf.json  codemodel-v2-d8fa053b587c4998984c.json  index-2020-11-16T13-30-56-0409.json  target-Downsample-Debug-3749ecdf08dad203e629.json
cxx/tmp/downsample/downsample_src/: CMakeLists.txt  main.cxx
cxx/tmp/generate_label/generate_label_build/: CMakeCache.txt  Makefile  cmake_install.cmake  generate_label
cxx/tmp/generate_label/generate_label_src/: CMakeLists.txt  main.cxx
src/: Model.py  configuration.json  dataloader.py  dataset.py  evaluate.py  inference.py  model.py  semantic-kitti.json  tmp.py  train.py  utils.py
src_old/: configuration.json  dataset.py  evaluate.py  model.py  utils.py
